--- a/css/general.css
+++ b/css/general.css
@@ -1029,7 +1029,7 @@ select:focus {
     text-align: center;
     padding: 8px 16px;
     position: fixed;
-    z-index: 1;
+    z-index: 9999999;
     left: 50%;
     bottom: -20px;
     font-size: 17px;
